update docs, auth and migrations
